--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,4 +1,62 @@
-.card{
+/* CSS for the Card component */
+.card {
     height: 232px;
-    width: auto;
+    width: 159px;
+    background-color: var(--css-black); /* Background color of the card */
+    overflow: hidden; /* Hide overflowing content within the card */
+}
+  
+.card-main {
+    width: 100%;
+}
+  
+.card-main-top {
+    width: 100%;
+    height: 170px; /* Height of the top section */
+    border-top-left-radius: 10px; /* Rounded top-left corner */
+    border-top-right-radius: 10px; /* Rounded top-right corner */
+    overflow: hidden; /* Hide overflowing content within the top section */
+}
+
+.card-main-top img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the image covers the entire top section */
+}
+
+.card-main-bottom {
+    width: 100%;
+    height: 35px; /* Height of the bottom section */
+    background-color: var(--css-white); /* Background color of the bottom section */
+    display: flex; /* Use a flex layout for content alignment */
+    align-items: center; /* Center the content vertically */
+    border-bottom-left-radius: 10px; /* Rounded bottom-left corner */
+    border-bottom-right-radius: 10px; /* Rounded bottom-right corner */
+    padding-left: 8px; /* Add left padding for content */
+}
+
+.card-main-bottom span{
+    height: 23px;
+    border-radius: 10px; /* Rounded corners for the inner span */
+    padding: 4px 8px; /* Padding for the inner span */
+    background-color: var(--css-black); /* Background color for the inner span */
+    color: var(--css-white); /* Text color for the inner span */
+    font-size: 10px; /* Font size for the inner span */
+    font-weight: 400; /* Font weight for the inner span */
+    line-height: 15px; /* Line height for the inner span */
+    font-family: Poppins; /* Font family for the inner span */
+}
+
+.card-bottom {
+    width: 100%;
+}
+
+.card-bottom span{
+    font-family: Poppins; /* Font family for the title in the bottom section */
+    font-size: 14px; /* Font size for the title in the bottom section */
+    font-weight: 400; /* Font weight for the title in the bottom section */
+    line-height: 21px; /* Line height for the title in the bottom section */
+    letter-spacing: 0px; /* Letter spacing for the title in the bottom section */
+    text-align: left; /* Text alignment for the title in the bottom section */
+    color: var(--css-white); /* Text color for the title in the bottom section */
 }
