--- a/src/components/HeroImage/HeroImage.css
+++ b/src/components/HeroImage/HeroImage.css
@@ -1,6 +1,6 @@
 .heroComponent{
     background-color: var(--css-black);
-    width: 100vw;
+    width: 100%;
     height: 270px;
     display: flex;
     justify-content: center;
